@@ -1,4 +1,3 @@
-/* eslint-disable */
 import {
   memo, useEffect,
 } from 'react';
@@ -6,16 +5,19 @@ import PropTypes from 'prop-types';
 import { Container, Grid } from '@material-ui/core';
 import { useParams } from 'react-router';
 
-import { Header, Page } from 'components';
-import { useStyles } from './PaymentsReportView.styles';
+import { Page } from 'components';
+import Header from './Header';
 import CashBox from './CashBox';
-// import Reminders from './Reminders';
+import { CASH_BOXES } from '../constans';
+import ChequesTable from './ChequesTable';
+import { useStyles } from './PaymentsReportView.styles';
 
 const PaymentsReportView = ({
   getCash,
   getCheques,
   cheques,
   cash,
+  countCheques,
 }) => {
   const classes = useStyles();
   const { year } = useParams();
@@ -24,29 +26,6 @@ const PaymentsReportView = ({
     getCash(year);
     getCheques({ year });
   }, [getCash, getCheques, year]);
-
-  const CASH_BOXES = [
-    {
-      title: '1º Trimestre',
-      value: '1',
-    },
-    {
-      title: '2º Trimestre',
-      value: '2',
-    },
-    {
-      title: '3º Trimestre',
-      value: '3',
-    },
-    {
-      title: '4º Trimestre',
-      value: '4',
-    },
-    {
-      title: 'Anual',
-      value: 'total',
-    },
-  ];
 
   return (
     <>
@@ -57,19 +36,27 @@ const PaymentsReportView = ({
         <Container
           maxWidth={false}
         >
-          <Header title='Panel' description='Inicio' />
+          <Header year={year} />
 
           <Grid
             container
             spacing={3}
           >
-            {cash && CASH_BOXES.map(box => <CashBox title={box.title} value={cash[box.value]} />)}
-            {/* <Reminders
-              reminders={reminders}
-              createReminder={createReminder}
-              setDeleteId={setDeleteId}
-            /> */}
+            {cash
+            && CASH_BOXES.map(box => (
+              <CashBox
+                title={box.title}
+                value={cash[box.value]}
+                size={box.size}
+              />
+            ))}
           </Grid>
+          <ChequesTable
+            cheques={cheques}
+            getCheques={getCheques}
+            count={countCheques}
+            year={year}
+          />
         </Container>
       </Page>
     </>
@@ -83,6 +70,7 @@ PaymentsReportView.propTypes = {
   getCash: PropTypes.func.isRequired,
   cheques: PropTypes.array.isRequired,
   getCheques: PropTypes.func.isRequired,
+  countCheques: PropTypes.number.isRequired,
 };
 export const story = PaymentsReportView;
 export default memo(PaymentsReportView);
