@@ -1,7 +1,0 @@
-import { makeStyles } from '@material-ui/core';
-
-export const useStyles = makeStyles(theme => ({
-  input: {
-    padding: theme.spacing(2),
-  },
-}));
