@@ -1,0 +1,23 @@
+export const CASH_BOXES = [
+  {
+    title: '1º Trimestre',
+    value: '1',
+  },
+  {
+    title: '2º Trimestre',
+    value: '2',
+  },
+  {
+    title: '3º Trimestre',
+    value: '3',
+  },
+  {
+    title: '4º Trimestre',
+    value: '4',
+  },
+  {
+    title: 'Anual',
+    value: 'total',
+    size: 4,
+  },
+];
